Moved Files and added STLs

--- a/API.html
+++ b/API.html
@@ -22,8 +22,8 @@
       "description": "Endpoints used to control Servos and magnets for the Robot arm."
     },
     "servers": [
-      { "url": "http://192.168.86.37:8080", "description": "Pico/Pi on LAN" },
-      { "url": "http://192.168.86.44:8080", "description": "Pico/Pi on LAN" }
+      { "url": "http://192.168.86.37:8080", "description": "RoccoNet" },
+      { "url": "http://172.20.10.6:8080", "description": "noahiphone hotspot network" }
     ],
     "tags": [
       { "name": "control", "description": "Robot API Control" }
